applications/puzzle/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puzzle
  labels:
    app: puzzle
spec:
  selector:
    matchLabels:
      app: puzzle
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: puzzle
        tier: puzzle
    spec:
      containers:
      - image: 127.0.0.1:30400/puzzle:$BUILD_TAG
        name: puzzle
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/up.sh"]
          preStop:
            exec:
              command: ["/down.sh"]
        ports:
        - containerPort: 3000
          name: puzzle

---
apiVersion: v1
kind: Service
metadata:
  name: puzzle
  labels:
    app: puzzle
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: puzzle
    tier: puzzle
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
        tier: mongo
    spec:
      containers:
      - image: mongo:5.0.11
        name: mongo
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
          name: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    tier: mongo
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: puzzle
spec:
  backend:
    serviceName: puzzle
    servicePort: 3000
  rules:
  - host: puzzle.192.168.56.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: puzzle
          servicePort: 3000
